# VR_Project

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  imgui.ini
objects/: red_light_domino.mtl
old/: window.cpp
save/: AreaLights.save  RainbowStar.save  StereoMatching.save  TheBunny.save  TheCube.save  a.save  blabla.save  color.save  d.save  deL.save  empty.save  example.save  falling.save  flower.save  gsfjdmlgkj.save  lights.save  lux.save  lux2.save  nightlife.save  pattern_matching.save  rainbow.save  surfaces.save  temp.save  test.save  test1.save  test2.save  to_delete.save
src/: CMakeLists.txt  areaLight.cpp  areaLight.h  camera.cpp  camera.h  colors.hpp  commonValues.h  constant.h  debug.h  directionalLight.cpp  directionalLight.h  display.cpp  display.h  fragSrc.txt  gui.cpp  gui.h  light.cpp  light.h  light_constructor.cpp  light_constructor.h  main.cpp  material.cpp  material.h  model.cpp  model.h  object.cpp  object.h  object_constructor.cpp  object_constructor.h  omniShadowMap.cpp  omniShadowMap.h  particle.cpp  particle.h  particleRender.cpp  particleRender.h  particleSystem.cpp  particleSystem.h  particlet.cpp  physics.cpp  physics.h  (+23 more)
src/Shaders/: area_light.fs  bumpmap.fs  bumpmap.vs  directional_shadow_map.frag  directional_shadow_map.vert  directional_shadow_map.vs  frag2D.txt  fragCube.fs  fragGround.fs  fragGround.txt  fragSrc.fs  fragSrc.txt  ground_shader.frag  ground_shader.vert  light_object.fs  light_plane.vs  main.fs  main.vs  normal_mapping.fs  normal_mapping.vs  omni_shadow_map.fs  omni_shadow_map.geom  omni_shadow_map.vs  paralax.fs  particle.vs  particleShader.fs  particleShader.vs  shader.frag  shader.vert  skybox.fs  skybox.vs  vert2D.txt  vertCube.txt  vertGround.txt  vertGround.vs  vertSrc.txt  vertSrc.vs
src/Shaders/materials/: vertMaterialCube.txt
src/save/: particle.cpp  particleShader.vs
src/utils/: cut_cubemap.py
src_learnopgl/: CMakeLists.txt  area_lights.cpp  colors.hpp  model.h
src_normal/: 4.normal_mapping.fs  CMakeLists.txt  model.h  normal_mapping.cpp
utils/cut_cubemaps/: py
